fix: CTA text too dark when in  light mode

--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@
   }
 
   .btn-cta {
-    @apply bg-secondary-three text-neutral-two-dark hover:bg-secondary-one active:bg-secondary-one active:inset-shadow-sm;
+    @apply bg-secondary-three text-neutral-one hover:bg-secondary-one active:bg-secondary-one active:inset-shadow-sm;
   }
 
   .btn-draggable {
